@@ -1,5 +1,15 @@
 2009-04-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
+	Bug fixes thanks to testing.
+	
+	* lib/host-host-seqc/load.c: Correctly compute the file size, so
+	as to not forget to read the last byte of data.
+
+	* lib/t-pppalpha/slimpl.m4: Remove redundant definition of
+	sl_create. Fix handling of places.
+
+2009-04-02  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
 	Improvements to unit test script (`slt'). Restore 'make distcheck'
 	again.
 
